[package]
name = "blockchain"
version = "0.1.0"
authors = ["aditya520 <arora.aditya520@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.4"
serde = { version = "1.0.104" , features = ["derive"]}
serde_derive = "1.0.104"
serde_json = "1.0.45"
sha2 = "0.8.1"
